--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Luxurious+Roman&display=swap');
+
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: rgb(30, 30, 30);
+  color: whitesmoke;
+  padding-top: 100px;
+  font-family: "Balsamiq Sans";
+  text-align: center; 
+
+  
 }
 
 code {
