--- a/src/Components/Gallery/Gallery.scss
+++ b/src/Components/Gallery/Gallery.scss
@@ -2,4 +2,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
+    img {
+        border: 5px solid rgb(214, 119, 216);
+        box-shadow: 0px 0px 0px 5px greenyellow;
+    }
+
+    figcaption{
+        padding: 10px;
+    }
 }
+
