--- a/src/index.css
+++ b/src/index.css
@@ -2,23 +2,10 @@
 
 body {
   margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  background: rgb(30, 30, 30);
-  color: whitesmoke;
+  padding: 0;  
+  /* background: rgb(30, 30, 30);
+  color: whitesmoke; */
   padding-top: 100px;
-  font-family: "Balsamiq Sans";
-  text-align: center; 
-
-  
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family:"Time News Roman" "Balsamiq Sans", "sans-serif", 'Courier New';
+  text-align: center;  
 }
