--- a/src/Components/Pages/HomePage/HomePage.scss
+++ b/src/Components/Pages/HomePage/HomePage.scss
@@ -101,6 +101,10 @@
 
                 width: 60%;
             }
+
+            h3 {
+                font-size: 22px;
+            }
         }        
     }
 }
