--- a/src/Components/GalleryLocation/GalleryLocation.scss
+++ b/src/Components/GalleryLocation/GalleryLocation.scss
@@ -1,7 +1,7 @@
 @import '../../index.scss';
 
-.c-galleryLocation {   
-    //background: lightcyan;
+.c-galleryLocation {  
+    
     margin: 5px;
     padding: 5px;
     display: flex;
@@ -15,11 +15,12 @@
 
 
     &__card {        
-        //background: rgb(214, 214, 214);
+        
         background: rgb(0, 176, 200);
         margin: 15px 0px;
         width: 290px;        
-        border: 3px solid rgb(119, 231,93);
+        border: 5px solid rgb(214, 119, 216);
+        box-shadow: 0px 0px 0px 5px greenyellow;
         color: rgb(0, 0, 0,);
         text-align: left;
         padding: 10px;
