--- a/src/index.scss
+++ b/src/index.scss
@@ -25,8 +25,8 @@ $large: 1200px;
 body {
   margin: 0;
   padding: 0;  
-  //background: rgb(30, 30, 30);
-  //color: whitesmoke;
+  background: rgb(30, 30, 30);
+  color: whitesmoke;
   padding-top: 100px;
   //font-family: "Times New Roman" "Balsamiq Sans", "sans-serif", 'Courier New';
   text-align: center;  
