--- a/src/Components/Pages/HomePage/HomePage.scss
+++ b/src/Components/Pages/HomePage/HomePage.scss
@@ -105,6 +105,11 @@
             h3 {
                 font-size: 22px;
             }
+
+            img {
+                width: 100%;
+            }
+
         }        
     }
 }
