--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,13 +1,13 @@
+@import '../../index.scss';
 
 .c-footer {
         width: 100%;
         height: 80px;
-        background: aqua;
+        background: $principal-color;
         color: #000000;
         display: flex;
         justify-content: center;
-        align-items: center;     
-    
+        align-items: center;      
 }
 
 
