--- a/src/Components/Gallery/Gallery.scss
+++ b/src/Components/Gallery/Gallery.scss
@@ -1,15 +1,53 @@
+@import '../../index.scss';
+
 .c-gallery {
+
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: center;   
 
-    img {
-        border: 5px solid rgb(214, 119, 216);        
-        box-shadow: 0px 0px 0px 5px greenyellow;
-    }
+    &__cards{ 
 
-    figcaption{
-        padding: 10px;
+        background: #000000;
+        border-radius: 10px;
+        width: 240px;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+              
+
+        img {
+            
+            width: 100%;
+            border-radius: 10px;
+        }
+    
+        figcaption{
+
+            width: 98%;
+            height: 100%;
+            padding: 5px;
+            border: 1px solid $principal-color;
+            margin: 10px 0;
+            border-radius: 10px;
+
+            h3{
+                
+                margin: 10px;
+                color: $principal-color;
+            } 
+    
+            p {
+                margin: 5px;
+                color: $grey-color;
+
+                span {
+    
+                    font-weight: bold;
+                }
+            }
+        }
     }
 }
 
