--- a/src/Components/GalleryLocation/GalleryLocation.scss
+++ b/src/Components/GalleryLocation/GalleryLocation.scss
@@ -16,11 +16,11 @@
 
     &__card {        
         
-        background: rgb(0, 176, 200);
+        background: rgb(0, 0, 0,);
         margin: 15px 0px;
         width: 290px;        
-        border: 5px solid rgb(214, 119, 216);
-        box-shadow: 0px 0px 0px 5px greenyellow;
+        border: 5px solid $secundary-color;
+        box-shadow: 0px 0px 0px 5px $principal-color;
         color: rgb(0, 0, 0,);
         text-align: left;
         padding: 10px;
@@ -32,9 +32,12 @@
 
 
         p {
+
+            color: rgb(218, 218, 218);
+
             span {
                 font-weight: bold;
-                color: rgb(119, 231,93);
+                color: $principal-color;
             }
         }
     }
