--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ body {
   color: whitesmoke;
   color: #000000;
   padding-top: 100px;
-  //font-family: "Times New Roman" "Balsamiq Sans", "sans-serif", 'Courier New';
+  font-family: "Times New Roman" "Balsamiq Sans", "sans-serif", 'Courier New';
   text-align: center;  
 }
 
