--- a/src/index.scss
+++ b/src/index.scss
@@ -6,11 +6,10 @@
 body {
   margin: 0;
   padding: 0;  
-  //background: rgb(30, 30, 30);
   color: whitesmoke;
   color: #000000;
   padding-top: 100px;
-  font-family: "sans-serif", 'Courier New';
+  font-family:Arial, Helvetica, sans-serif;
   text-align: center;  
 }
 
