--- a/src/Components/Pagination/Pagination.scss
+++ b/src/Components/Pagination/Pagination.scss
@@ -7,6 +7,7 @@
         padding: 15px;
         background: linear-gradient(45deg,  rgb(60, 248, 143) ,rgb(132, 238, 178) );
         border: none;
+        cursor: pointer;
        
 
         &:hover{
